// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StationExpandedView hides the fuel prices table when fuel_prices is empty 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Services
        </h5>
        <div
          class="flex flex-wrap gap-2"
          data-testid="amenities-badges"
        >
          <span
            class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
          >
            Car Wash
          </span>
          <span
            class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
          >
            Toilets
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`StationExpandedView renders the amenities empty state when amenities is empty 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Fuel prices
        </h5>
        <table
          class="w-full text-sm"
          data-testid="fuel-prices-table"
        >
          <thead>
            <tr
              class="border-b border-slate-400"
            >
              <th
                class="py-1 font-normal text-left text-gray-700"
              >
                Fuel type
              </th>
              <th
                class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
              >
                Price (pence/litre)
              </th>
              <th
                class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
              >
                Last updated
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Unleaded (E10)
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                132.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Super unleaded (E5)
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                140.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Diesel
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                138.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Services
        </h5>
        <p
          class="text-sm text-gray-600"
        >
          No services listed.
        </p>
      </div>
    </div>
  </div>
</details>
`;

exports[`StationExpandedView renders the default expanded view with prices, hours and amenities 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Fuel prices
        </h5>
        <table
          class="w-full text-sm"
          data-testid="fuel-prices-table"
        >
          <thead>
            <tr
              class="border-b border-slate-400"
            >
              <th
                class="py-1 font-normal text-left text-gray-700"
              >
                Fuel type
              </th>
              <th
                class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
              >
                Price (pence/litre)
              </th>
              <th
                class="py-1 pl-2 font-normal text-right text-gray-700 sm:pl-4"
              >
                Last updated
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Unleaded (E10)
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                132.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Super unleaded (E5)
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                140.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Diesel
              </td>
              <td
                class="py-1 pl-2 font-medium text-right sm:pl-4"
              >
                138.9p
              </td>
              <td
                class="py-1 pl-2 text-right text-gray-600 sm:pl-4"
              >
                15/01/2025
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Services
        </h5>
        <div
          class="flex flex-wrap gap-2"
          data-testid="amenities-badges"
        >
          <span
            class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
          >
            Car Wash
          </span>
          <span
            class="px-4 py-1 text-xs text-gray-800 border rounded border-slate-400 shadow-bottom-gray"
          >
            Toilets
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;
